# arxiv-deep-research

./: .env.example  .gitignore  CLAUDE.md  Makefile  PHASE_3_EVALUATION_RESULTS.md  README.md  SEARCH_ARXIV_FAILURE_ANALYSIS.md  STRUCTURED_PARAMS_IMPLEMENTATION_SUMMARY.md  STRUCTURED_PARAMS_TEST_RESULTS.md  TEST-COMMANDS.md  agentic.go  agentic_test.go  agentic_types.go  budget_test.go  docker-compose.langfuse.yml  estimator_test.go  example.py  go.mod  go.sum  guardrail.go  manager.go  manager_test.go  pyproject.toml  recall.go  recall_test.go  registry.go  registry_test.go  test-arxiv-text-cli.sh  test-arxiv-text-simple.sh  toolset.go  toolset_test.go  visualize_trace.html
.claude/: settings.json
.claude/plans/: context-management.md  fetch-paper-fulltext.md  memory-store.md  replace-langfuse-with-local-tracing-tests.md  replace-langfuse-with-local-tracing.md  server-and-toolsets.md  toolset-tests.md  trace-evaluator-tool-usage-analysis.md
.claude/skills/: finish-work.md
analysis_tools/analyze_rationale/: analyze_rationale.go
analysis_tools/dataset_extractor/: tool_eval_dataset_extractor  (+1 more)
cmd/ctxmgr-demo/: main.go
memoryclient/: adapter.go  bootstrap.go  details.go  migrate.go  search.go  store.go
server/: server.go  server_test.go  sse.go  sse_test.go
src/: agentic_test_helpers_test.go  agentic_types_test.go  budget.go  compaction.go  compaction_test.go  estimator.go  go.mod  go.sum  guardrail_test.go  integration_test.go  loop.go  loop_test.go  main.go  manager.go  toolsize.go  toolsize_test.go  turn.go  turn_test.go
tools/: estimators.go  handlers.go
(+181 files in other folders)
