[project]
name = "arxiv-deep-research"
version = "0.1.0"
description = "Deep research tool using arXiv papers and web search"
requires-python = ">=3.11"
dependencies = [
    "anyio",
    "beautifulsoup4",
    "httpx",
    "pydantic",
    "requests",
    "claude-agent-sdk",
    "langfuse",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
